--- a/assets/partials/header.html
+++ b/assets/partials/header.html
@@ -12,10 +12,10 @@
 
   <div class="nav-wrapper" id="navWrapper">
     <nav class="nav">
-      <a href="index.html">首頁</a>
-      <a href="services.html">服務項目</a>
-      <a href="about.html">關於我們</a>
-      <a href="contact.html">聯絡我們</a>
+      <a href="index.html">▶首頁◀</a>
+      <a href="services.html">▶服務項目◀</a>
+      <a href="about.html">▶關於我們◀</a>
+      <a href="contact.html">▶聯絡我們◀</a>
     </nav>
   </div>
 
